k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: backend

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:281639841923:certificate/d8b25b2f-ecd3-4536-8b5d-b4d4f7622f58

    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP":80},{"HTTPS":443}]

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/healthcheck-path: /health

    alb.ingress.kubernetes.io/success-codes: "200"

spec:

  ingressClassName: alb

  rules:

  - host: dev-api.rahulinfotech.in

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: backend

            port:

              number: 5000
